# Matrix-Calculator

./: CMakeLists.txt  Doxyfile  Main.cpp  README.md
examples/: input_01.txt
matrix/: CMatrix.cpp  CMatrix.h  CMatrixFull.cpp  CMatrixFull.h  CMatrixSparse.cpp  CMatrixSparse.h
matrix/vector/: CVector.cpp  CVector.h  CVectorFull.cpp  CVectorFull.h
tests/: AllTests.h  Test.cpp  Test1.h  Test2.h  Test3.h  Test4.h  Test5.h
tools/: CInvalidMatrixException.cpp  CInvalidMatrixException.h  CMVCException.cpp  CMVCException.h  CPoint_2D.cpp  CPoint_2D.h  Consts.h  Numbers.cpp  Numbers.h
ui/: CController.cpp  CController.h  CModel.cpp  CModel.h  CView.cpp  CView.h  help.txt
